--- a/hc/en/conditional-get.html
+++ b/hc/en/conditional-get.html
@@ -97,19 +97,19 @@
 
                     <p>Serendipity supports an HTTP-cache compatible way of only showing items in an RSS feed which where modified since the last request from a client.</p>
 
-                    <p>Typically, an RSS reader fetches your RSS feeds (15 items, per default). It then remembers the timestamp when those items where fetched. By the time your RSS reader updates the feed (typically after 1 hour) Serendipity will now only serve all new or modified items since the last time of refresh. If no entries where updated since then, serendipity will only serve the 304 Header (Not Modified) and saves a lot of bandwidth for both client and server on periodical updates.</p>
+                    <p>Typically, an RSS reader fetches your RSS feeds (15 items, per default). It then remembers the timestamps when those items where fetched. By the time your RSS reader updates the feed (typically after 1 hour) Serendipity will now only serve all new or modified items since the last time of refresh. If no entries where updated since then, Serendipity will only serve the 304 Header (Not Modified) and saves a lot of bandwidth for both client and server on periodical updates.</p>
 
-                    <p>Technically an RSS reader catches the “Last-Modified” Header of the RSS output as well as a special “ETag”-Header. Both are set to the last modification time of your article base. On the next fetch, those received headers are sent as “IF_MODIFIED_SINCE” (= Last-Modified) and “IF_NONE_MATCH” (= ETag) Headers and will affect your rss feed. This is what saves the bandwidth on both client and server side.</p>
+                    <p>Technically an RSS reader catches the “Last-Modified”-Header of the RSS output as well as a special “ETag”-Header. Both are set to the last modification time of your article base. On the next fetch, those received headers are sent as “IF_MODIFIED_SINCE” (= Last-Modified) and “IF_NONE_MATCH” (= ETag) Headers and will affect your RSS feed. This is what saves the bandwidth on both client and server side.</p>
 
                     <p>Users who have been watching your feed and where not able to catch up the latest articles may miss some of them, because you usually only get 15 items per feed. In case your reader provides the IF_MODIFIED_SINCE header the client can now catch all items (resp. a maximum of 50 articles to prevent abuse).</p>
 
-                    <p>If you want to permanently disable that feature (whatever the reasons are) you can either set a “$_REQUEST[‘nocache’] = true” inside your rss.php file (first line) or append the ‘&amp;nocache=true’ request variable to your feed so that it looks like:</p>
+                    <p>If you want to permanently disable that feature (whatever the reasons are) you can either set a <code>$_REQUEST['nocache'] = true</code> inside your “rss.php” file (first line) or append the ‘&amp;nocache=true’ request variable to your feed so that it looks like:</p>
 
                     <pre><code>http://example.host/serendipity/rss.php?version=2.0&amp;nocache=true</code></pre>
 
-                    <p>Of course, the usual feed behaviour is not affected if none of the caching headers are provided. So if you use syndication methods to embed content from a blog inside an application, just tune your application to either send the ‘nocache’-Variable to a Serendipity blog, or to not send the caching headers.</p>
+                    <p>Of course, the usual feed behavior is not affected if none of the caching headers are provided. So if you use syndication methods to embed content from a Blog inside an application, just tune your application to either send the ‘nocache’-Variable to a Serendipity Blog, or to not send the caching headers.</p>
 
-                    <p>The syndication plugin can be configured to append that variable to your feed URLs from your blog.</p>
+                    <p>The syndication plugin can be configured to append that variable to your feed URLs from your Blog.</p>
                 </div>
             </div>
         </div>
