hc: functions - Use variable coding single quotes

--- a/hc/en/functions.html
+++ b/hc/en/functions.html
@@ -142,7 +142,7 @@
                           <li><span class="var">serendipity_login</span>: Perform login to Serendipity</li>
                           <li><span class="var">serendipity_authenticate_author</span>: Perform user authentication routine</li>
                           <li><span class="var">serendipity_userLoggedIn</span>: Check if a user is logged in</li>
-                          <li><span class="var">serendipity_setCookie</span>: Set a Cookie via HTTP calls, and update $_COOKIE plus $serendipity[‘COOKIE’] array.</li>
+                          <li><span class="var">serendipity_setCookie</span>: Set a Cookie via HTTP calls, and update $_COOKIE plus <code>$serendipity['COOKIE']</code> array.</li>
                           <li><span class="var">serendipity_getPermissions</span>: Retrieves an array of applying permissions to an author</li>
                           <li><span class="var">serendipity_getPermissionNames</span>: Returns the list of available internal Serendipity permission field names</li>
                           <li><span class="var">serendipity_checkPermission</span>: Checks if a permission is granted to a specific author</li>
