hc: primers - More for 8052321

--- a/hc/en/code-primer.html
+++ b/hc/en/code-primer.html
@@ -187,7 +187,7 @@ print_r($entries);
   <li><code>$serendipity['forceBase64']</code>: When enabled, mails are encoded with base64 instead of imap_8bit (default false)</li>
   <li><code>$serendipity['use_iframe']</code>: When enabled, uses an IFRAME to save entries in the Backend to prevent timeouts (default true)</li>
   <li><code>$serendipity['autolang']</code>: Default language, when autodetection fails (default “en”)</li>
-  <li><code>$serendipity['defaultTemplate']</code>: Which template directory to use for fallback chaining (see below) (default “2k111”)</li>
+  <li><code>$serendipity['defaultTemplate']</code>: Which template directory to use for fallback chaining (see below) (default “2k11”)</li>
   <li><code>$serendipity['template_backend']</code>: Which Backend template to use when none is configured (default “2k11”)</li>
   <li><code>$serendipity['backendBlogtitleFirst']</code>: If true, the page titles of Backend pages will have the form “Blog title | Backend section name” instead of “Backend section name | Blog title” (default false). <strong>Serendipity Styx</strong> has this order “section | $admin | Blog title” set as default.</li>
   <li><code>$serendipity['dashboardCommentsLimit']</code>: How many comments to show in the dashboard overview (default 5)</li>
@@ -197,7 +197,7 @@ print_r($entries);
   <li><code>$serendipity['charsets']</code>: Holds an array of supported charsets (native and UTF-8 by default)</li>
   <li><code>$serendipity['use_autosave']</code>: Whether to use local-browser autosaving feature (default true)</li>
   <li><code>$serendipity['imagemagick_thumb_parameters']</code>: Optional parameters passed to ImageMagick when creating thumbnails (default empty)</li>
-  <li><code>$serendipity['logLevel']</code>: If set, enables using the Katzgrau KLogger (writes to templates_c/). If set to “debug”, be extra verbose (default: ‘Off’)</li>
+  <li><code>$serendipity['logLevel']</code>: If set, enables using the Katzgrau KLogger (writes to “templates_c/logs/”). If set to “debug”, be extra verbose (default: ‘Off’)</li>
 </ul>
 
 <h4 id="docs-htaccess">.htaccess</h4>
