hc: primers - More for 8052321

--- a/hc/en/code-primer.html
+++ b/hc/en/code-primer.html
@@ -189,7 +189,7 @@ print_r($entries);
   <li><code>$serendipity['autolang']</code>: Default language, when autodetection fails (default “en”)</li>
   <li><code>$serendipity['defaultTemplate']</code>: Which template directory to use for fallback chaining (see below) (default “2k11”)</li>
   <li><code>$serendipity['template_backend']</code>: Which Backend template to use when none is configured (default “2k11”)</li>
-  <li><code>$serendipity['backendBlogtitleFirst']</code>: If true, the page titles of Backend pages will have the form “Blog title | Backend section name” instead of “Backend section name | Blog title” (default false). <strong>Serendipity Styx</strong> has this order “section | $admin | Blog title” set as default.</li>
+  <li><code>$serendipity['backendBlogtitleFirst']</code>: If true, the page titles of Backend pages will have the form “Blog title | Backend section name” instead of “Backend section name | Blog title” (default false). <strong>Serendipity Styx</strong> has this order “section | admin | Blog title” (eg. “Plugins | Serendipity Administration Suite | John Doe Blog”) set as default.</li>
   <li><code>$serendipity['dashboardCommentsLimit']</code>: How many comments to show in the dashboard overview (default 5)</li>
   <li><code>$serendipity['dashboardEntriesLimit']</code>: How many future entries and drafts to show in the dashboard overview (default 5)</li>
   <li><code>$serendipity['languages']</code>: Holds an array of available languages</li>
