hc: templating - Remove version note for $template_option()

--- a/hc/en/templating.html
+++ b/hc/en/templating.html
@@ -179,7 +179,7 @@
                                   <li><a href="#docs-category-int-category_info-array">$category [int], $category_info [array]</a></li>
                                   <li><a href="#docs-template-string">$template [string]</a></li>
                                   <li><a href="#docs-daterange-array">$dateRange [array]</a></li>
-                                  <li><a href="#docs-template_option-array---available-only-for-serendipity-11-and-above">$template_option [array - available only for Serendipity 1.1 and above]</a></li>
+                                  <li><a href="#docs-template_option-array---available-only-for-serendipity-11-and-above">$template_option [array]</a></li>
                                 </ul>
                               </li>
                             </ul>
@@ -1242,7 +1242,7 @@ It is not advised to create your own  style_fallback.css file.</p>
 
 <p>Scope: *.tpl</p>
 
-<h5 id="docs-template_option-array---available-only-for-serendipity-11-and-above">$template_option [array - available only for Serendipity 1.1 and above]</h5>
+<h5 id="docs-template_option-array---available-only-for-serendipity-11-and-above">$template_option [array]</h5>
 
 <p>Holds configured template options that were set in the Backend for templates supporting options (like colorsets, navigation links etc.)</p>
 
