hc: templating - Other highlight for db table reference

--- a/hc/en/templating.html
+++ b/hc/en/templating.html
@@ -834,7 +834,7 @@ It is not advised to create your own  style_fallback.css file.</p>
   <li><strong>serendipity_showPlugin</strong> (serendipity_smarty_showPlugin): Shows the output of a specific sidebar plugin.
     <ul>
       <li><span class="var">class</span>: The classname of the plugin to show, like “serendipity_plugin_quicksearch”</li>
-      <li><span class="var">id</span>: A distinct ID of a plugin to show (see database table <code>serendipity_plugins</code>)</li>
+      <li><span class="var">id</span>: A distinct ID of a plugin to show (see database table “<strong>serendipity_plugins</strong>”)</li>
       <li><span class="var">side</span>: Which sidebar the plugins belongs to. If set to “*”, the sidebar will not matter.</li>
       <li><span class="var">negate</span>: If set, reverts the previous filters, can be used to “Show all plugins EXCEPT …”.</li>
       <li><span class="var">empty</span>: Can be set to a string that is shown, when the plugin output was empty.</li>
